# polyp-segmentation

./: .gitignore  POLYP_SEG_BUILD_SPEC.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: default.yaml  smoke.yaml  splits.json
scripts/: 00_download_data.py  01_inspect_data.py  02_build_splits.py  03_smoke_run.py  04_train.py  05_evaluate.py  06_explain.py  07_export_onnx.py
src/: __init__.py
src/common/: __init__.py  predictor.py  result.py
src/data/: __init__.py  dataset.py  download.py  splits.py  transforms.py
src/engine/: __init__.py  evaluator.py  trainer.py
src/explain/: __init__.py  gradcam.py
src/export/: __init__.py  onnx_export.py
src/inference/: __init__.py  predictor.py
src/losses/: __init__.py  losses.py
src/metrics/: __init__.py  boundary.py  calibration.py  segmentation.py
src/models/: __init__.py  build.py
src/utils/: __init__.py  config.py  logging.py  seeding.py  viz.py
tests/: test_smoke.py
