[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polyp-segmentation"
version = "0.1.0"
description = "Polyp segmentation on Kvasir-SEG — Project 1/5 reference template for the AI Surgical & Diagnostic Assistant portfolio."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
